[package]
edition = "2024"
name = "gufo_http"
version = "0.5.0"

[lib]
crate-type = ["cdylib"] # Comment for bench
# crate-type = ["cdylib", "rlib"] # Uncomment for bench
name = "gufo_http"

[profile.release]
strip = "debuginfo" # Uncomment for release
# debug = true # Uncomment for perf
lto = "fat" # Full link-time optimization

[dependencies]
bytes = "1.5"
pyo3 = {version = "0.26", features = ["extension-module"]}
pyo3-async-runtimes = {version = "0.26", features = ["attributes", "tokio-runtime"]}
reqwest = {version = "0.12.23", features = ["blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "zstd", "hickory-dns", "http2", "socks"], default-features = false}
tokio = "1.47.1"

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
