[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "wheel", "setuptools-rust"]

[project]
authors = [{name = "Gufo Labs"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Topic :: System :: Networking :: Monitoring",
  "Operating System :: POSIX :: Linux",
  "Typing :: Typed",
]
description = "The accelerated Python HTTP client library"
dynamic = ["version"]
keywords = ["error"]
license = {text = "BSD 3-Clause License"}
name = "gufo_http"
requires-python = ">=3.9"

[project.optional-dependencies]
bench = [
  "requests==2.31.0",
  "httpx==0.27",
  "aiohttp==3.9.3",
  "aiosonic==0.18.0",
  "niquests==3.5.2",
  "pycurl==7.45.3",
  "matplotlib==3.8.3",
]
build = [
  "setuptools-rust==1.5.2",
]
docs = [
  "mkdocs-material==9.6.11",
  "mkdocstrings[python]==0.29.1",
  "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.2",
  "mkdocs-section-index==0.3.10",
]
ipython = [
  "ipython==9.4.0",
]
lint = [
  "mypy==1.13.0",
  "ruff==0.11.2",
  "types-PyYAML==6.0.12.3",
]
test = [
  "pytest==8.3.3",
  "pytest-benchmark==5.1.0",
  "coverage[toml]==7.6.4",
  "PyYAML>=6.0",
]
test-extra = [
  "proxy.py==2.4.10",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/gufolabs/gufo_http/issues"
Changelog = "https://github.com/gufolabs/gufo_http/blob/master/CHANGELOG.md"
Documentation = "https://docs.gufolabs.com/gufo_http/"
Homepage = "https://github.com/gufolabs/gufo_http/"
"Source Code" = "https://github.com/gufolabs/gufo_http/"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "gufo.http.__version__"}

[tool.distutils.build_rust]
inplace = true
release = true

[tool.coverage.run]
omit = ["*tests*", "*examples*"]

[tool.coverage.html]
directory = "dist/coverage"

[tool.cibuildwheel]
before-test = "pip install -e {project}[test,test-extra]"
test-command = "cd {project} && pytest -v tests/"

[tool.cibuildwheel.linux]
before-all = "./tools/build/setup-rust.sh && pip install -e .[build]"
manylinux-aarch64-image = "manylinux2014"
# manylinux-i686-image = "manylinux_2_24"
# manylinux-ppc64le-image = "manylinux_2_24"
# manylinux-pypy_aarch64-image = "manylinux_2_24"
# manylinux-pypy_i686-image = "manylinux_2_24"
# manylinux-pypy_x86_64-image = "manylinux_2_24"
# manylinux-s390x-image = "manylinux_2_24"
manylinux-x86_64-image = "manylinux2014"
musllinux-aarch64-image = "musllinux_1_1"
# musllinux-i686-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"
musllinux-x86_64-image = "musllinux_1_1"

[tool.rull]
line-length = 79 
target-version = "py39" # Assume Python 3.9
# Always autofix, but never try to fix `F401` (unused imports).
fix = true

[tool.ruff.lint]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "build", "dist", "target"]
# Enable
select = [
  "E", # Pycodestyle Error
  "F", # Pyflakes
  "W", # Pycodestyle Warning
  "C90", # mccabe
  "I", # isort
  "D", # Pydocstyle
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions 
  "EM", # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PLC", # pylint
  "PLE", # pylint
  "PLR", # pylint
  "PLW", # pylint
  "PIE", # flake8-pie
  "RUF", # ruff specific
]

ignore = ["D203", "D212", "D107", "PLR0913"]
unfixable = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
"benchmarks/*.py" = [
  "ANN001", # Missing type annotation for function argument `x`
  "ANN201", # Missing return type annotation for public function `x`
  "ANN202", # Missing return type annotation for private function `x`
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `x`
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "S101", # Use of assert detected
  "PT011", # {exc} is too broad, set the `match` parameter or use a more specific exception.
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "S113", # Probable use of requests call without timeout
  "S310", # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S501", # Probable use of `{x}` call with `verify=False` disabling SSL certificate checks
]
"examples/*.py" = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "PLR2004", #  Magic value used in comparison, consider replacing {x} with a constant variable
]
"src/gufo/http/httpd.py" = [
  "E501", # Line too long
  "S603", # `subprocess` call: check for execution of untrusted input
  "S607", # Starting a process with a partial executable path
]
"tests/*.py" = [
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `x`
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "S101", # Use of assert detected
  "S603", # `subprocess` call: check for execution of untrusted input
  "PT011", # {exc} is too broad, set the `match` parameter or use a more specific exception.
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
  "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
]

[[tool.setuptools-rust.ext-modules]]
target = "gufo.http._fast"

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
strict = true
warn_unused_ignores = false
